--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "Escape and stringify an array of arguments to be executed on the shell",
   "author": [
     "Martin PANEL <martin@xorax.info> (http://xorax.info)",
-    "Dave Eddy <dave@daveeddy.com> (http://www.daveeddy.com)"
+    "Dave Eddy <dave@daveeddy.com> (http://www.daveeddy.com)",
+    "Maciej Krüger <mkg20001@gmail.com> (https://mkg20001.io)"
   ],
   "main": "./shell-escape.js",
   "scripts": {
     "test": "for f in test/*; do echo \"$f\"; node \"$f\" || exit 1; echo; done; echo Passed; exit 0"
   },
-  "repository": "git://github.com/xxorax/node-shell-escape.git",
+  "repository": "git://github.com/mkg20001/node-shell-escape.git",
   "license": "MIT",
   "dependencies": {},
-  "keywords": [
-    "shell",
-    "escape",
-    "bash",
-    "escapeshellarg"
-  ]
+  "keywords": ["shell", "escape", "bash", "escapeshellarg"]
 }
