--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell-escape",
+  "name": "escape-it",
   "version": "0.2.1",
   "description": "Escape and stringify an array of arguments to be executed on the shell",
   "author": [
@@ -7,11 +7,11 @@
     "Dave Eddy <dave@daveeddy.com> (http://www.daveeddy.com)",
     "Maciej Krüger <mkg20001@gmail.com> (https://mkg20001.io)"
   ],
-  "main": "./shell-escape.js",
+  "main": "./index.js",
   "scripts": {
     "test": "for f in test/*; do echo \"$f\"; node \"$f\" || exit 1; echo; done; echo Passed; exit 0"
   },
-  "repository": "git://github.com/mkg20001/node-shell-escape.git",
+  "repository": "git://github.com/mkg20001/escape-it.git",
   "license": "MIT",
   "dependencies": {},
   "keywords": ["shell", "escape", "bash", "escapeshellarg"]
